# TrendMaster

./: PROJECT_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  broken_refs.txt  check_env.py  check_test_connect.py  clean_logs.ps1  diag_import.py  dump_schema.py  env_set.txt  find_broken_refs.py  initialize_auth.py  project.toml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_admin_direct.py  run_app.py  run_test.py  smoke_test.py  test_integrity_db.py  tmp_diagnostic.py  tmp_diagnostic_simple.py  tmp_diagnostic_tests.py  tmp_verify_discovery.py  tmp_verify_imports.py  verify_output.txt
IntegrityService/: pyproject.toml  requirements.txt
IntegrityService/integrity_service/: alerts.py  backup.py  config.py  integrity_check.py  integrity_runner.py  scheduler.py  state.py
TestApi/: main.py
data/: data_model.md  etl_data_model_diagram.mmd
data/API/: customers.csv  order_items.csv  orders.csv
logs/: etl_structured.json
scripts/: verify_db_package.py
src/: __init__.py  bootstrap.py  cache_cleaner.py  connect.py  etl_exceptions.py  logging_system.py  main.py  path_config.py
src/api/: __init__.py  api_client.py  api_models.py  data_processor.py  example_usage.py  rate_limiter.py
src/auth/: __init__.py  account_lockout.py  migration_add_2fa_columns.py  migration_add_security_columns.py  password_handler.py  (+8 more)
tests/: __init__.py  run_tests.py  test_api_csv_export.py  test_csv_access.py
tmp/: tmp_diagnostic_simple.py  tmp_verify_api_client_test.py  tmp_verify_api_models.py  tmp_verify_discovery.py  tmp_verify_fix.py  tmp_verify_imports.py
(+136 files in other folders)
