[project]
name = "trendmaster"
version = "0.1.0"
description = "TrendMaster project"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]